--- a/alt/src/index.css
+++ b/alt/src/index.css
@@ -1,4 +1,8 @@
-:root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -21,17 +25,19 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
-
+} */
+/*
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
+  padding: 0;
+  /* display: flex;
+  width: 100vw;
+  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh; */
+/* } */
+/*
+/* h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
@@ -66,4 +72,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
