--- a/alt/src/App.css
+++ b/alt/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +39,25 @@
 
 .read-the-docs {
   color: #888;
+} */
+
+::-webkit-scrollbar {
+  /* Customize the scrollbar width */
+  background: transparent;
+
+  width: 10px;
+
+}
+
+::-webkit-scrollbar-track {
+  /* Customize the scrollbar track */
+  /* background: #FBF5EC; */
+  margin-left: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+  /* Customize the scrollbar thumb */
+  background: #202C34;
+  border-radius: 1000px;
+  border: solid #FBF5EC;
 }
