--- a/alt/src/components/module.css
+++ b/alt/src/components/module.css
@@ -7,6 +7,17 @@
   100% { opacity: 1; }
 }
 
+@keyframes swipeRight {
+  0% {
+    transform: translate(-50px,0px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0px,0px);
+    opacity: 1;
+  }
+}
+
 @keyframes fadeIn-bg {
   0% { background: rgba(28, 30, 33, 0);  }
   100% { background: rgba(28, 30, 33, .9); }
@@ -15,6 +26,10 @@
 .fade-in-delay0 {
   animation: fadeIn 1s;
   animation-timing-function: linear;
+}
+
+.swipeRight {
+  animation: swipeRight 1s;
 }
 
 
